--- a/Login/LoginUsuarios/templates/cadastro.html
+++ b/Login/LoginUsuarios/templates/cadastro.html
@@ -7,7 +7,7 @@
     <title>Cadastro</title>
 </head>
 <body>
-    <form action="{% url'cadastro'%}" method="POST">
+    <form action="{% url 'cadastro' %}" method="POST">{% csrf_token %}
         <input type="text" placeholder="Username..." name="username">
         <br>
         <input type="email" placeholder="Email..." name="email">
